Added services for testing
Signed-off-by: Valentin Popov <info@valentineus.link>

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ sudo: false
 addons:
   postgresql: "10"
 
+services:
+  - "mysql"
+  - "postgresql"
+
 env:
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
