--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ cache:
     - "$HOME/.npm"
 
 php:
-  - 5.6
   - 7.0
   - 7.1
+  - 7.2
 
 env:
   global:
@@ -26,11 +26,17 @@ env:
     - DB=mysqli
     - DB=pgsql
 
+matrix:
+  include:
+    - php: 5.6
+      env: MOODLE_BRANCH=MOODLE_33_STABLE
+
 before_install:
   - phpenv config-rm xdebug.ini
   - nvm install 8.9
   - nvm use 8.9
   - cd ../..
+  - composer selfupdate
   - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
@@ -52,7 +58,9 @@ script:
 jobs:
   include:
     - stage: deploy
+      install: false
       script: false
+
       before_deploy:
         - cd "$TRAVIS_REPO_SLUG"
         - git stash --all
