--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: php
 sudo: true
 
 addons:
-  firefox: "47.0.1"
-  postgresql: "9.3"
+  firefox: "latest-esr"
+  postgresql: "9.6"
   apt:
     packages:
       - "oracle-java8-installer"
@@ -27,7 +27,7 @@ env:
     - DB=pgsql
 
 matrix:
-  include:
+  allow_failures:
     - php: 5.6
       env: MOODLE_BRANCH=MOODLE_33_STABLE
 
