--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ cache:
     - "$HOME/.npm"
 
 php:
-  - 5.6
   - 7.0
   - 7.1
   - 7.2
@@ -26,11 +25,6 @@ env:
   matrix:
     - DB=mysqli
     - DB=pgsql
-
-matrix:
-  allow_failures:
-    - php: 5.6
-      env: MOODLE_BRANCH=MOODLE_33_STABLE
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -58,9 +52,18 @@ script:
 
 jobs:
   include:
+    - stage: test old
+      php: 5.6
+
+      env:
+        global:
+          - MOODLE_BRANCH=MOODLE_33_STABLE
+        matrix:
+          - DB=mysqli
+          - DB=pgsql
+
     - stage: deploy
-      install: false
-      script: false
+      php: 7.2
 
       before_deploy:
         - cd "$TRAVIS_REPO_SLUG"
