--- a/.travis.yml
+++ b/.travis.yml
@@ -53,14 +53,8 @@ script:
 jobs:
   include:
     - stage: test old
+      env: MOODLE_BRANCH=MOODLE_33_STABLE
       php: 5.6
-
-      env:
-        global:
-          - MOODLE_BRANCH=MOODLE_33_STABLE
-        matrix:
-          - DB=mysqli
-          - DB=pgsql
 
     - stage: deploy
       php: 7.2
