--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,10 @@ script:
 jobs:
   include:
     - stage: test old
-      env: MOODLE_BRANCH=MOODLE_33_STABLE
       php: 5.6
+      env:
+        - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
+        - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
 
     - stage: deploy
       php: 7.2
