--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ jobs:
       deploy:
         api_key: $GITHUB_PROJECT_TOKEN
         email: "info@valentineus.link"
-        file: "../build/*.zip"
+        file: "build/*.zip"
         file_glob: true
         provider: releases
         skip_cleanup: true
